// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`categorical Should render categorical legend with breaks from custom 1`] = `""`;

exports[`categorical Should render categorical legend with breaks from default 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="US"
    >
      <Category
        color="#54B399"
        isLinesOnly={false}
        isPointsOnly={true}
        label="US_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="CN"
    >
      <Category
        color="#6092C0"
        isLinesOnly={false}
        isPointsOnly={true}
        label="CN_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="__fallbackCategory__"
    >
      <Category
        color="#D36086"
        isLinesOnly={false}
        isPointsOnly={true}
        label={
          <EuiTextColor
            color="secondary"
          >
            Other
          </EuiTextColor>
        }
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render custom ordinal legend with breaks 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#FF0000"
        isLinesOnly={false}
        isPointsOnly={true}
        label="0_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="10"
    >
      <Category
        color="#00FF00"
        isLinesOnly={false}
        isPointsOnly={true}
        label="10_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render only single band of last color when delta is 0 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="100"
    >
      <Category
        color="#072f6b"
        isLinesOnly={false}
        isPointsOnly={true}
        label="100_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`ordinal Should render ordinal legend as bands 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="#f7faff"
        isLinesOnly={false}
        isPointsOnly={true}
        label="0_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="13"
    >
      <Category
        color="#ddeaf7"
        isLinesOnly={false}
        isPointsOnly={true}
        label="13_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="25"
    >
      <Category
        color="#c5daee"
        isLinesOnly={false}
        isPointsOnly={true}
        label="25_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="38"
    >
      <Category
        color="#9dc9e0"
        isLinesOnly={false}
        isPointsOnly={true}
        label="38_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="50"
    >
      <Category
        color="#6aadd5"
        isLinesOnly={false}
        isPointsOnly={true}
        label="50_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="63"
    >
      <Category
        color="#4191c5"
        isLinesOnly={false}
        isPointsOnly={true}
        label="63_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="75"
    >
      <Category
        color="#2070b4"
        isLinesOnly={false}
        isPointsOnly={true}
        label="75_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="88"
    >
      <Category
        color="#072f6b"
        isLinesOnly={false}
        isPointsOnly={true}
        label="88_format"
        styleName="lineColor"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
